--- a/public/assets/scss/_config.scss
+++ b/public/assets/scss/_config.scss
@@ -1,3 +1,5 @@
 $light-color: #f4f4f4;
-$text-color: #808080;
+$text-color: #5e5c5c;
+$card-color: #adeafd;
 $main-font: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+$b-test: solid red 5px;
