--- a/public/assets/scss/_navbar.scss
+++ b/public/assets/scss/_navbar.scss
@@ -1,10 +1,16 @@
 nav {
+  background-color: $card-color;
+  color: $text-color;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  justify-items: center;
+  height: 75px;
+  text-align: center;
+
   img {
-    height: 50px;
-    width: 50px;
+    height: 40px;
+    width: 40px;
   }
 
   ul {
@@ -15,4 +21,38 @@ nav {
   li {
     padding: 15px;
   }
+
+  #git {
+    height: 50px;
+    width: 50px;
+  }
+}
+
+.footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  height: 100px;
+  margin-top: 100px;
+}
+
+.menu-btn {
+  cursor: pointer;
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  z-index: 2;
+  display: none;
+}
+
+.name {
+  margin-left: 20px;
+  padding-left: 20px;
+}
+
+.navHead {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  max-width: 1100px;
 }
